# RT-DETR

./: pyproject.toml
rtdetr/: __init__.py
rtdetr/core/: __init__.py  config.py  yaml_config.py  yaml_utils.py
rtdetr/data/: __init__.py  dataloader.py  functional.py  transforms.py
rtdetr/data/cifar10/: __init__.py
rtdetr/data/coco/: __init__.py  coco_dataset.py  coco_eval.py  coco_utils.py
rtdetr/misc/: dist.py  logger.py  visualizer.py
rtdetr/nn/: __init__.py
rtdetr/nn/arch/: __init__.py  classification.py
rtdetr/nn/backbone/: __init__.py  common.py  presnet.py  test_resnet.py  utils.py
rtdetr/nn/criterion/: __init__.py  utils.py
rtdetr/optim/: __init__.py  amp.py  ema.py  optim.py
rtdetr/solver/: __init__.py  det_engine.py  det_solver.py  solver.py
rtdetr/zoo/rtdetr/: __init__.py  denoising.py  hybrid_encoder.py  matcher.py  rtdetr.py  rtdetr_criterion.py  rtdetr_decoder.py  rtdetr_postprocessor.py  utils.py
rtdetr_pytorch/: pyproject.toml
rtdetr_pytorch/configs/dataset/: coco_detection.yml
rtdetr_pytorch/configs/rtdetr/: rtdetr_r101vd_6x_coco.yml  rtdetr_r18vd_6x_coco.yml  rtdetr_r34vd_6x_coco.yml  rtdetr_r50vd_6x_coco.yml  rtdetr_r50vd_m_6x_coco.yml
rtdetr_pytorch/src/data/coco/: coco_dataset.py
tools/: export_onnx.py  train.py
