[tool.poetry]
name = "rtdetr"
version = "0.1.0"
description = ""
authors = ["narumi <toucans-cutouts0f@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.0.1"
torchvision = "^0.15.2"
onnx = "^1.14.0"
onnxruntime = "^1.15.1"
pycocotools = "^2.0.7"
pyyaml = "^6.0.1"
scipy = "^1.13.1"
nvidia-nccl-cu11 = "^2.21.5"
nvidia-cufft-cu11 = "^10.9.0.58"
nvidia-cuda-nvrtc-cu11 = "^11.8.89"
nvidia-nvtx-cu11 = "^11.8.86"
nvidia-cusparse-cu11 = "^11.7.5.86"
nvidia-curand-cu11 = "^10.3.0.86"
nvidia-cuda-runtime-cu11 = "^11.8.89"
nvidia-cuda-cupti-cu11 = "^11.8.87"
nvidia-cublas-cu11 = "^11.11.3.6"
nvidia-cusolver-cu11 = "^11.4.1.48"
nvidia-cudnn-cu11 = "^9.1.1.17"


[tool.poetry.group.dev.dependencies]
ruff = "^0.4.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
exclude = ["build"]
line-length = 120

[tool.ruff.lint]
select = [
    "B",   # flake8-bugbear
    "C",   # flake8-comprehensions
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "SIM", # flake8-simplify
    "UP",  # pyupgrade
    "W",   # pycodestyle warnings
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]

[tool.ruff.lint.isort]
force-single-line = true

[tool.pytest.ini_options]
filterwarnings = ["ignore::DeprecationWarning"]
