[project]
name = "rtdetr-pytorch"
version = "0.1.0"
description = "Add your description here"
authors = [{ name = "narumi", email = "toucans-cutouts0f@icloud.com" }]
dependencies = [
    "torch==2.0.1",
    "torchvision==0.15.2",
    "onnx==1.14.0",
    "onnxruntime==1.15.1",
    "pycocotools>=2.0.8",
    "pyyaml>=6.0.1",
    "scipy>=1.14.0",
    "numpy==1.26.4",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/rtdetr_pytorch"]
